--- a/eXchange/Base.lproj/Main.storyboard
+++ b/eXchange/Base.lproj/Main.storyboard
@@ -188,11 +188,42 @@
                         <segue destination="CRN-cS-KFk" kind="relationship" relationship="viewControllers" id="l8O-NL-sve"/>
                         <segue destination="sJK-N3-b39" kind="relationship" relationship="viewControllers" id="kiV-Tj-cnx"/>
                         <segue destination="2gH-u9-gRa" kind="relationship" relationship="viewControllers" id="Vqw-LU-1bn"/>
+                        <segue destination="fnp-UO-azp" kind="relationship" relationship="viewControllers" id="Eo8-59-b4N"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OHF-Pq-Vy7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="277" y="253"/>
+        </scene>
+        <!--User-->
+        <scene sceneID="LSK-K1-L6q">
+            <objects>
+                <viewController id="fnp-UO-azp" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ZUw-HI-XcN"/>
+                        <viewControllerLayoutGuide type="bottom" id="lXG-ML-yIS"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="sST-EN-rM0">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Gzk-fD-iFr">
+                                <rect key="frame" x="20" y="20" width="560" height="110"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Gzk-fD-iFr" firstAttribute="trailing" secondItem="sST-EN-rM0" secondAttribute="trailingMargin" id="5EW-DG-J8g"/>
+                            <constraint firstItem="Gzk-fD-iFr" firstAttribute="top" secondItem="ZUw-HI-XcN" secondAttribute="bottom" id="Lk5-NE-byv"/>
+                            <constraint firstItem="Gzk-fD-iFr" firstAttribute="leading" secondItem="sST-EN-rM0" secondAttribute="leadingMargin" id="i28-IP-slC"/>
+                            <constraint firstItem="lXG-ML-yIS" firstAttribute="top" secondItem="Gzk-fD-iFr" secondAttribute="bottom" constant="421" id="jD4-Lz-KC8"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="User" image="user" id="NXe-TZ-lCX"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="p1I-dU-GLu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="444" y="1275"/>
         </scene>
         <!--MyMeals-->
         <scene sceneID="k8E-g6-55P">
@@ -708,8 +739,9 @@
         </scene>
     </scenes>
     <resources>
-        <image name="myMealsIcon" width="295" height="236"/>
+        <image name="myMealsIcon" width="40" height="32"/>
         <image name="news_feed" width="32" height="32"/>
         <image name="swap_vert" width="40" height="40"/>
+        <image name="user" width="35" height="35"/>
     </resources>
 </document>
