--- a/eXchange/Base.lproj/Main.storyboard
+++ b/eXchange/Base.lproj/Main.storyboard
@@ -738,15 +738,43 @@
                                 </constraints>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="LKe-lA-lY5">
-                                <rect key="frame" x="20" y="126" width="175" height="175"/>
+                                <rect key="frame" x="213" y="136" width="175" height="175"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="175" id="4jk-wX-mUC"/>
-                                    <constraint firstAttribute="width" secondItem="LKe-lA-lY5" secondAttribute="height" multiplier="1:1" id="T5C-vc-UzH"/>
+                                    <constraint firstAttribute="width" secondItem="LKe-lA-lY5" secondAttribute="height" multiplier="1:1" id="aUY-AF-K5F"/>
+                                    <constraint firstAttribute="width" constant="175" id="yvk-Xm-bB1"/>
                                 </constraints>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cul-Pb-TOn">
-                                <rect key="frame" x="68" y="309" width="78" height="30"/>
-                                <state key="normal" title="Change Pic"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mAi-gc-aY5">
+                                <rect key="frame" x="20" y="400" width="560" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NetID: " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BcW-Tb-Smr">
+                                <rect key="frame" x="20" y="436" width="560" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Club:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7J9-jc-wWG">
+                                <rect key="frame" x="20" y="476" width="560" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w91-5I-4NM">
+                                <rect key="frame" x="307" y="332" width="175" height="41"/>
+                                <state key="normal" title="Log Out">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cul-Pb-TOn">
+                                <rect key="frame" x="118" y="332" width="175" height="41"/>
+                                <state key="normal" title="Change Pic">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
                                 <connections>
                                     <action selector="changeUserImage:" destination="KmK-fi-Qhv" eventType="touchUpInside" id="2vE-ME-cJQ"/>
                                 </connections>
@@ -754,19 +782,38 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="LKe-lA-lY5" firstAttribute="top" secondItem="8fg-bS-ykK" secondAttribute="bottom" constant="8" symbolic="YES" id="43t-VU-ieN"/>
-                            <constraint firstItem="Cul-Pb-TOn" firstAttribute="top" secondItem="LKe-lA-lY5" secondAttribute="bottom" constant="8" symbolic="YES" id="9ac-sO-n1A"/>
+                            <constraint firstItem="LKe-lA-lY5" firstAttribute="top" secondItem="8fg-bS-ykK" secondAttribute="bottom" constant="18" id="125-7b-S8S"/>
+                            <constraint firstItem="w91-5I-4NM" firstAttribute="centerX" secondItem="Mwt-m4-WF0" secondAttribute="centerX" constant="94.5" id="8iT-uH-3U9"/>
                             <constraint firstItem="8fg-bS-ykK" firstAttribute="top" secondItem="Mwt-m4-WF0" secondAttribute="topMargin" constant="8" id="CMh-FI-aFA"/>
-                            <constraint firstItem="LKe-lA-lY5" firstAttribute="centerX" secondItem="Cul-Pb-TOn" secondAttribute="centerX" id="H4N-Z3-CR2"/>
+                            <constraint firstItem="BcW-Tb-Smr" firstAttribute="top" secondItem="mAi-gc-aY5" secondAttribute="bottom" constant="15" id="IKE-fh-HKR"/>
+                            <constraint firstItem="mAi-gc-aY5" firstAttribute="leading" secondItem="8fg-bS-ykK" secondAttribute="leading" id="J7i-J5-ZLJ"/>
+                            <constraint firstItem="w91-5I-4NM" firstAttribute="leading" secondItem="Cul-Pb-TOn" secondAttribute="trailing" constant="14" id="OGo-tY-ogy"/>
+                            <constraint firstItem="Cul-Pb-TOn" firstAttribute="top" secondItem="LKe-lA-lY5" secondAttribute="bottom" constant="21" id="PXO-wi-TG3"/>
+                            <constraint firstItem="Cul-Pb-TOn" firstAttribute="centerX" secondItem="Mwt-m4-WF0" secondAttribute="centerX" constant="-94.5" id="QnG-BQ-qKv"/>
+                            <constraint firstItem="mAi-gc-aY5" firstAttribute="leading" secondItem="BcW-Tb-Smr" secondAttribute="leading" id="Xh2-JJ-EYp"/>
+                            <constraint firstItem="mAi-gc-aY5" firstAttribute="top" secondItem="Cul-Pb-TOn" secondAttribute="bottom" constant="38" id="aPY-RV-oao"/>
                             <constraint firstItem="8fg-bS-ykK" firstAttribute="leading" secondItem="Mwt-m4-WF0" secondAttribute="leadingMargin" id="aRU-zt-wAz"/>
+                            <constraint firstItem="7J9-jc-wWG" firstAttribute="top" secondItem="BcW-Tb-Smr" secondAttribute="bottom" constant="19" id="aks-oV-bYh"/>
+                            <constraint firstItem="mAi-gc-aY5" firstAttribute="trailing" secondItem="BcW-Tb-Smr" secondAttribute="trailing" id="bE6-dJ-QYb"/>
+                            <constraint firstItem="Cul-Pb-TOn" firstAttribute="baseline" secondItem="w91-5I-4NM" secondAttribute="baseline" id="hLv-Wp-AUR"/>
                             <constraint firstItem="8fg-bS-ykK" firstAttribute="trailing" secondItem="Mwt-m4-WF0" secondAttribute="trailingMargin" id="jLa-Te-TJs"/>
-                            <constraint firstItem="LKe-lA-lY5" firstAttribute="leading" secondItem="8fg-bS-ykK" secondAttribute="leading" id="lvE-Ln-aau"/>
-                            <constraint firstItem="Ei5-XH-jT5" firstAttribute="top" secondItem="Cul-Pb-TOn" secondAttribute="bottom" constant="212" id="ose-v3-lCK"/>
+                            <constraint firstItem="w91-5I-4NM" firstAttribute="top" secondItem="LKe-lA-lY5" secondAttribute="bottom" constant="21" id="jbx-cc-G9E"/>
+                            <constraint firstItem="BcW-Tb-Smr" firstAttribute="leading" secondItem="7J9-jc-wWG" secondAttribute="leading" id="jpi-LT-51i"/>
+                            <constraint firstItem="LKe-lA-lY5" firstAttribute="centerX" secondItem="8fg-bS-ykK" secondAttribute="centerX" id="o24-Pt-1xZ"/>
+                            <constraint firstItem="BcW-Tb-Smr" firstAttribute="trailing" secondItem="7J9-jc-wWG" secondAttribute="trailing" id="p0U-e9-HJs"/>
+                            <constraint firstItem="mAi-gc-aY5" firstAttribute="trailing" secondItem="8fg-bS-ykK" secondAttribute="trailing" id="q9y-z9-mrI"/>
+                            <constraint firstItem="w91-5I-4NM" firstAttribute="width" secondItem="Cul-Pb-TOn" secondAttribute="width" id="rSw-aF-4MA"/>
+                            <constraint firstItem="w91-5I-4NM" firstAttribute="height" secondItem="Cul-Pb-TOn" secondAttribute="height" id="ukg-6y-hAY"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="eeV-09-31m"/>
                     <connections>
+                        <outlet property="changePicButton" destination="Cul-Pb-TOn" id="HXJ-df-UUn"/>
+                        <outlet property="clubLabel" destination="7J9-jc-wWG" id="ip9-E8-kIJ"/>
                         <outlet property="eXchangeBanner" destination="8fg-bS-ykK" id="m73-h1-tsL"/>
+                        <outlet property="logOutButton" destination="w91-5I-4NM" id="Rpa-T7-NVm"/>
+                        <outlet property="nameLabel" destination="mAi-gc-aY5" id="UBc-WV-3dG"/>
+                        <outlet property="netIDlabel" destination="BcW-Tb-Smr" id="v9A-s9-vsZ"/>
                         <outlet property="userImageView" destination="LKe-lA-lY5" id="hJv-ne-8W2"/>
                     </connections>
                 </viewController>
